# trilinos-spack-packages

./: #generate_spack_packages.py#  .gitignore  CMakeLists.txt  CTestConfig.cmake  LICENSE  README.md  Trilinos17_package_dependencies.xml  base_package.py  driver.sh  generate_spack_packages.py  generate_spack_packages.py~  parse_tribits_xml.py  setup-spack.sh  spack_packages_from_tribits_xml.py
generated-spack-packages/Teuchos/: spack.yaml
generated-spack-packages/trilinos_adelus/: package.py
generated-spack-packages/trilinos_amesos/: package.py
generated-spack-packages/trilinos_amesos2/: package.py
generated-spack-packages/trilinos_anasazi/: package.py
generated-spack-packages/trilinos_aztec_oo/: package.py
generated-spack-packages/trilinos_base_class/: package.py
generated-spack-packages/trilinos_belos/: package.py
generated-spack-packages/trilinos_compadre/: package.py
generated-spack-packages/trilinos_epetra/: package.py
generated-spack-packages/trilinos_epetra_ext/: package.py
generated-spack-packages/trilinos_galeri/: package.py
generated-spack-packages/trilinos_gtest/: package.py
generated-spack-packages/trilinos_ifpack/: package.py
generated-spack-packages/trilinos_ifpack2/: package.py
generated-spack-packages/trilinos_intrepid/: package.py
generated-spack-packages/trilinos_intrepid2/: package.py
generated-spack-packages/trilinos_isorropia/: package.py
generated-spack-packages/trilinos_kokkos/: package.py
generated-spack-packages/trilinos_kokkos_kernels/: package.py
generated-spack-packages/trilinos_krino/: package.py
generated-spack-packages/trilinos_m_l/: package.py
generated-spack-packages/trilinos_mini_tensor/: package.py
generated-spack-packages/trilinos_ml/: package.py
generated-spack-packages/trilinos_mue_lu/: package.py
generated-spack-packages/trilinos_n_ox/: package.py
generated-spack-packages/trilinos_new_package/: package.py
generated-spack-packages/trilinos_nox/: package.py
generated-spack-packages/trilinos_pamgen/: package.py
generated-spack-packages/trilinos_panzer/: package.py
generated-spack-packages/trilinos_percept/: package.py
generated-spack-packages/trilinos_phalanx/: package.py
generated-spack-packages/trilinos_piro/: package.py
generated-spack-packages/trilinos_pliris/: package.py
generated-spack-packages/trilinos_py_trilinos/: package.py
generated-spack-packages/trilinos_py_trilinos2/: package.py
generated-spack-packages/trilinos_r_ol/: package.py
generated-spack-packages/trilinos_r_top/: package.py
generated-spack-packages/trilinos_rol/: package.py
generated-spack-packages/trilinos_rtop/: package.py
spack-config/: config.yaml  repos.yaml
spack_repo/trilinos/: repo.yaml
test/: long-test.py  quick-test.py
trilinos-build/: tribits.xml
(+58 files in other folders)
